# OnlineShop

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
crud/: products_crud.py  tags_crud.py
database/: database.py
models/: products_model.py  tags_model.py
routers/: products_router.py  tags_router.py
schemas/: products_schemas.py  tags_schemas.py
